Updated the code blocks.

--- a/codelabs/how-to-install-python-in-mac/index.html
+++ b/codelabs/how-to-install-python-in-mac/index.html
@@ -54,18 +54,18 @@
 
       </google-codelab-step>
     
-      <google-codelab-step label="How to install python with Homebrew" duration="0">
+      <google-codelab-step label="How to Install Python with Homebrew" duration="0">
         <p><a href="https://brew.sh" target="_blank">Homebrew</a>, a package manager for Mac, is another way to install Python. This approach is preferred by users who want to install Python from the command line. However, it requires Homebrew to be already up and running on your Mac.</p>
 <ol type="1">
-<li>Open terminal.</li>
+<li>Open terminal</li>
 <li>Update Homebrew</li>
 </ol>
-<pre><code language="language-bash" class="language-bash">$ brew update
+<pre><code language="language-shell" class="language-shell">$ brew update
 </code></pre>
 <ol type="1" start="3">
 <li>Execute install command for Python. This should install Python in your machine without problem.</li>
 </ol>
-<pre><code language="language-bash" class="language-bash">$ brew install python
+<pre><code language="language-shell" class="language-shell">$ brew install python
 </code></pre>
 
 
@@ -74,12 +74,12 @@
       <google-codelab-step label="Verify Python is Installed" duration="0">
         <p>There are various ways to verify if Python was successfully installed in your <code>Mac</code> machine.</p>
 <p>You can use the terminal command <code>which</code>, where it will print the <code>path</code> of Python in your machine:</p>
-<pre><code language="language-bash" class="language-bash">$ which python
+<pre><code language="language-shell" class="language-shell">$ which python
 # prints the following
 $ /usr/local/bin/python
 </code></pre>
 <p>You can also execute the command to check the version of Python installed in your machine using the terminal.</p>
-<pre><code language="language-bash" class="language-bash">$ python --version
+<pre><code language="language-shell" class="language-shell">$ python --version
 # prints the following
 Python 3.10.0
 </code></pre>
