--- a/codelabs/how-to-install-python-in-windows/index.html
+++ b/codelabs/how-to-install-python-in-windows/index.html
@@ -53,10 +53,9 @@
     
       <google-codelab-step label="Verify Python is Installed" duration="0">
         <p>There are various ways to verify if Python was successfully installed in your <code>Windows</code> machine.</p>
-<p>Open Windows control panel, Python should be listed as installed software.</p>
-<p class="image-container"><img src="img/8b6e3c9224eb29fe.png"></p>
+<p>Open Windows control panel, Python should be listed as installed software. <img alt="Control Panel" src="img/8b6e3c9224eb29fe.png"></p>
 <p>You can also execute the command to check the version of Python installed in your machine using <code>PowerShell</code> or <code>Command Prompt</code>.</p>
-<pre><code language="language-bash" class="language-bash">$ python --version
+<pre><code language="language-shell" class="language-shell">$ python --version
 # prints the following
 Python 3.10.0
 </code></pre>
