Added creation of firebase project.

--- a/codelabs/how-to-install-python-in-mac/index.html
+++ b/codelabs/how-to-install-python-in-mac/index.html
@@ -43,13 +43,29 @@
 <ol type="1">
 <li>Visit the <a href="https://www.python.org/downloads/" target="_blank">downloads</a> page of Python.</li>
 <li>Download the latest (or your desired) version of Python.</li>
-<li>Open the downloaded <code>.pk</code> file and a dialog box will appear like below. <img alt="Installation Dialog" src="img/9e82cefca956a342.webp"></li>
-<li>Read the important information (Read Me) and continue to the next step. <img alt="Important Information" src="img/62e51b2f50bd8a7.png"></li>
-<li>Understand the license and click continue. <img alt="License" src="img/8d1d341309cc141f.png"></li>
-<li>Click on agree if you agree with the agreement and conditions. <img alt="Agreement and Conditions" src="img/94e532ef72219088.png"></li>
-<li>Select the destination where you would like to install Python. It is recommended to use the default install destination. <img alt="Install Destination" src="img/9fcdbb11b1ae7246.png"></li>
-<li>Installation will commence, and you will get the message below once done. <img alt="Installation Done" src="img/d6653591ced67899.png"></li>
+<li>Open the downloaded <code>.pk</code> file and a dialog box will appear like below.</li>
 </ol>
+<p class="image-container"><img alt="Installation Dialog" src="img/9e82cefca956a342.webp"></p>
+<ol type="1" start="4">
+<li>Read the important information (Read Me) and continue to the next step.</li>
+</ol>
+<p class="image-container"><img alt="Important Information" src="img/62e51b2f50bd8a7.png"></p>
+<ol type="1" start="5">
+<li>Understand the license and click continue.</li>
+</ol>
+<p class="image-container"><img alt="License" src="img/8d1d341309cc141f.png"></p>
+<ol type="1" start="6">
+<li>Click on agree if you agree with the agreement and conditions.</li>
+</ol>
+<p class="image-container"><img alt="Agreement and Conditions" src="img/94e532ef72219088.png"></p>
+<ol type="1" start="7">
+<li>Select the destination where you would like to install Python. It is recommended to use the default install destination.</li>
+</ol>
+<p class="image-container"><img alt="Install Destination" src="img/9fcdbb11b1ae7246.png"></p>
+<ol type="1" start="8">
+<li>Installation will commence, and you will get the message below once done.</li>
+</ol>
+<p class="image-container"><img alt="Installation Done" src="img/d6653591ced67899.png"></p>
 
 
       </google-codelab-step>
