--- a/codelabs/how-to-install-python-in-windows/index.html
+++ b/codelabs/how-to-install-python-in-windows/index.html
@@ -42,18 +42,26 @@
 <ol type="1">
 <li>Visit the <a href="https://www.python.org/downloads/" target="_blank">downloads</a> page of Python.</li>
 <li>Download the latest (or your desired) version of Python.</li>
-<li>Open the downloaded <code>.exe</code> file and a dialog box will appear like below. <img alt="Install Window" src="img/bdcc6a9fb6b98963.png"></li>
-<li>Tick the <code>Add python.exe to PATH</code>, and then click the <code>Install Now</code> option.</li>
-<li>A dialog prompt will appear, then click <code>Yes</code> to proceed with the installation progress. <img alt="Installation Progress" src="img/850901bdae862e2c.png"></li>
-<li>After few seconds, you will be notified if the setup is successful. Click the <code>close</code> button to close the dialog. <img alt="Installation Progress" src="img/d7330523e3ec5826.png"></li>
+<li>Open the downloaded <code>.exe</code> file and a dialog box will appear like below.</li>
 </ol>
+<p class="image-container"><img alt="Install Window" src="img/bdcc6a9fb6b98963.png"></p>
+<ol type="1" start="4">
+<li>Tick the <code>Add python.exe to PATH</code>, and then click the <code>Install Now</code> option.</li>
+<li>A dialog prompt will appear, then click <code>Yes</code> to proceed with the installation progress.</li>
+</ol>
+<p class="image-container"><img alt="Installation Progress" src="img/850901bdae862e2c.png"></p>
+<ol type="1" start="6">
+<li>After few seconds, you will be notified if the setup is successful. Click the <code>close</code> button to close the dialog.</li>
+</ol>
+<p class="image-container"><img alt="Installation Progress" src="img/d7330523e3ec5826.png"></p>
 
 
       </google-codelab-step>
     
       <google-codelab-step label="Verify Python is Installed" duration="0">
         <p>There are various ways to verify if Python was successfully installed in your <code>Windows</code> machine.</p>
-<p>Open Windows control panel, Python should be listed as installed software. <img alt="Control Panel" src="img/8b6e3c9224eb29fe.png"></p>
+<p>Open Windows control panel, Python should be listed as installed software.</p>
+<p class="image-container"><img alt="Control Panel" src="img/8b6e3c9224eb29fe.png"></p>
 <p>You can also execute the command to check the version of Python installed in your machine using <code>PowerShell</code> or <code>Command Prompt</code>.</p>
 <pre><code language="language-shell" class="language-shell">$ python --version
 # prints the following
