--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <title>Codelabs</title>
 
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="./styles/main.css">
 
   
 
-  <link rel="import" href="/elements/elements.html">
+  <link rel="import" href="./elements/elements.html">
 
   <style is="custom-style">
     :root {
@@ -93,8 +93,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     
     <div id="mainToolbar" class="paper-header">
       <div class="site-width layout horizontal">
-        <a href="/">
-          <img src="/images/googdev192.png" class="logo-devs" alt="Codelabs Logo">
+        <a href="./">
+          <img src="./images/googdev192.png" class="logo-devs" alt="Codelabs Logo">
         </a>
         <div id="searchbar">
           <paper-input-container no-label-float>
