--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="#455a64">
   <meta name="apple-mobile-web-app-title" content="Codelabs">
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="/images/favicons/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/images/favicons/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#455a64">
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="./images/favicons/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./images/favicons/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicons/favicon-16x16.png">
+  <link rel="manifest" href="./site.webmanifest">
+  <link rel="mask-icon" href="./images/favicons/safari-pinned-tab.svg" color="#455a64">
   <meta name="msapplication-TileColor" content="#455a64">
-  <meta name="msapplication-TileImage" content="/images/favicons/mstile-144x144.png">
+  <meta name="msapplication-TileImage" content="./images/favicons/mstile-144x144.png">
   <meta name="theme-color" content="#455a64">
 
   <meta name="og:type" property="og:type" content="website" />
@@ -74,9 +74,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <meta name="og:site_name" property="og:site_name" content="Codelabs" />
   <meta name="og:determiner" property="og:determiner" content="the" />
   <meta name="og:locale" property="og:locale" content="en_US" />
-  <meta name="og:image" property="og:image" content="/images/og-image.png" />
-  <meta name="og:image:url" property="og:image:url" content="/images/og-image.png" />
-  <meta name="og:image:type" property="og:image:type" content="image/png" />
+  <meta name="og:image" property="og:image" content="./images/og-image.png" />
+  <meta name="og:image:url" property="og:image:url" content="./images/og-image.png" />
+  <meta name="og:image:type" property="og:image:type" content="./image/png" />
   <meta name="og:image:width" property="og:image:width" content="1200" />
   <meta name="og:image:height" property="og:image:height" content="1200" />
   <meta name="og:image:alt" property="og:image:alt" content="Codelabs" />
@@ -84,7 +84,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <meta name="twitter:card" property="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" property="twitter:title" content="Codelabs" />
   <meta name="twitter:description" property="twitter:description" content="Codelabs has a collection of guided, hands-on learning and coding experience for various modern technologies. Most codelabs will take you through the process of building a small application or adding a new feature to an existing application." />
-  <meta name="twitter:image" property="twitter:image" content="/images/og-image.png" />
+  <meta name="twitter:image" property="twitter:image" content="./images/og-image.png" />
   <meta name="twitter:url" property="twitter:url" content="https://example.com/" />
 </head>
 
@@ -372,15 +372,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="footerbar">
       <div class="site-width layout horizontal center justified">
         <span>
-          <a href="codelabs/terms-conditions/#0">Terms</a>
+          <a href="./codelabs/terms-conditions/#0">Terms</a>
           &nbsp; | &nbsp;
-          <a href="codelabs/privacy-statement/#0">Privacy</a>
+          <a href="./codelabs/privacy-statement/#0">Privacy</a>
         </span>
       </div>
     </div>
 
   </paper-header-panel>
 
-  <script src="/scripts/main.js"></script>
+  <script src="./scripts/main.js"></script>
 </body>
 </html>
