--- a/codelabs/course-list-app/index.html
+++ b/codelabs/course-list-app/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta name="theme-color" content="#4F7DC9">
   <meta charset="UTF-8">
-  <title>Course List Application</title>
+  <title>Course List App</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
   <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://storage.googleapis.com/claat-public/codelab-elements.css">
@@ -23,8 +23,8 @@
   <google-codelab-analytics gaid="UA-49880327-14" ga4id=""></google-codelab-analytics>
   <google-codelab codelab-gaid=""
                   codelab-ga4id=""
-                  id="course-list-application"
-                  title="Course List Application"
+                  id="course-list-app"
+                  title="Course List App"
                   environment="web"
                   feedback-link="">
     
@@ -56,7 +56,7 @@
       </google-codelab-step>
     
       <google-codelab-step label="Create Project" duration="5">
-        <p>Create a New Project with the Empty Activity template and a minimum SDK of 35.</p>
+        <p>Create a New Project with the Empty Activity template and use your last name as part of the package name (<strong><em>com.example.yourlastname</em></strong>).</p>
 
 
       </google-codelab-step>
